# rektifier

./: .dockerignore  .envrc  .gitignore  CLAUDE.md  COMPATIBILITY_NOTES.md  CONTEXT.md  Cargo.toml  README.md  docker-compose.yml  justfile  rektifier-bootstrap.sql  rektifier.toml.example
clienttests/: README.md
clienttests/java-sdk-v1/: pom.xml
clienttests/java-sdk-v1/src/main/java/com/rektifier/clienttest/: Main.java
clienttests/java-sdk-v2/: pom.xml
clienttests/java-sdk-v2/src/main/java/com/rektifier/clienttest/: Main.java
crates/rekt-auth/: Cargo.toml
crates/rekt-auth/src/: audit.rs  crypto.rs  lib.rs  master_key.rs  permissive.rs  sigv4.rs
crates/rekt-auth/src/api_token/: cache.rs  format.rs  mod.rs  store.rs
crates/rekt-auth/src/jwt/: issuer.rs  jwks.rs  mod.rs  presets.rs
crates/rekt-auth/src/jwt/test_keys/: rsa_2048_priv.pem  rsa_2048_pub.pem
crates/rekt-auth/src/sigv4/: cache.rs  canonical.rs  mod.rs  store.rs  verifier.rs
crates/rekt-auth/tests/: api_token_pg.rs  sigv4_pg.rs
crates/rekt-bench/: Cargo.toml
crates/rekt-bench/src/: main.rs
crates/rekt-catalog/: Cargo.toml
crates/rekt-catalog/src/: bootstrap.rs  lib.rs  metadata.rs  reconciler.rs  seeder.rs
crates/rekt-catalog/tests/: lsi_reconciler_pg.rs
crates/rekt-config/: Cargo.toml
crates/rekt-config/src/: auth.rs  lib.rs
crates/rekt-config/tests/: invalid.rs  valid.rs
crates/rekt-ddl/: Cargo.toml
crates/rekt-ddl/src/: create.rs  errors.rs  lib.rs  naming.rs  validation.rs
crates/rekt-ddl/tests/: gsi_pg_integration.rs  lsi_pg_integration.rs
crates/rekt-expressions/: Cargo.toml
crates/rekt-expressions/src/: ast.rs  lib.rs  parser.rs  reserved_words.rs  substitute.rs
crates/rekt-expressions/tests/: condition_parse.rs  update_parse.rs
crates/rekt-gsi/: Cargo.toml
crates/rekt-gsi/src/: backfill.rs  index.rs  lib.rs  remove.rs  state.rs  verify.rs
crates/rekt-gsi/tests/: backfill_pg.rs  index_pg.rs  orchestrator_pg.rs  remove_pg.rs  verify_pg.rs
crates/rekt-meta/: Cargo.toml
crates/rekt-meta/src/: lib.rs
crates/rekt-meta/tests/: verify.rs
crates/rekt-protocol/: Cargo.toml
crates/rekt-protocol/src/: attribute_value.rs  ddl.rs  lib.rs  operations.rs
crates/rekt-protocol/tests/: roundtrip.rs
crates/rekt-server/: Cargo.toml
crates/rekt-server/src/: ddl.rs  lib.rs
crates/rekt-server/tests/: dispatch.rs
crates/rekt-sigv4/: Cargo.toml
crates/rekt-sigv4/src/: lib.rs
crates/rekt-storage/: Cargo.toml
crates/rekt-storage-libpq/: Cargo.toml
crates/rekt-storage-libpq/src/: batch_get.rs  batch_write.rs  condition_sql.rs  lib.rs  put_delete.rs  query.rs  retry.rs  scan.rs  shape.rs  transact_get.rs  transact_write.rs  types.rs  update.rs
crates/rekt-storage-libpq/tests/: dual_write_batch_transact_pg.rs  dual_write_pg.rs
crates/rekt-storage/src/: lib.rs
crates/rekt-translator/: Cargo.toml
crates/rekt-translator/src/: checks.rs  classify.rs  error.rs  eval.rs  key_condition.rs  keys.rs  lib.rs  materialize.rs  paging.rs  plan.rs  projection.rs  schema.rs  translate.rs
crates/rekt-translator/src/eval/: condition.rs  mod.rs  update.rs  values.rs
crates/rektifier/: Cargo.toml
crates/rektifier/src/: auth_wiring.rs  lib.rs  main.rs
crates/rektifier/tests/: auth_wiring_smoke.rs
docs/: COMPARISON_VS_EXTENDDB.md
docs/auth/: role_separation.sql  runbook.md
docs/perf/: baseline.md  crud-conditional-baseline.md  index-bench.md  query-scan-baseline.md  update-baseline.md
smoketests/: README.md
smoketests/java-sdk-v1/: pom.xml
smoketests/java-sdk-v1/src/main/java/com/rektifier/smoke/: Main.java
smoketests/java-sdk-v2/: pom.xml
smoketests/java-sdk-v2/src/main/java/com/rektifier/smoke/: Main.java
tests/diff/: Cargo.toml
tests/diff/tests/: diff.rs
