[package]
name = "rekt-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Authentication layer for rektifier (SigV4 + JWT + opaque API tokens)"

[dependencies]
async-trait = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# A2 — SigV4 strict + pattern-3 secret cache.
aes-gcm = "0.10"
base64 = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dashmap = "6"
deadpool-postgres = { workspace = true }
hex = "0.4"
hkdf = "0.12"
hmac = "0.12"
percent-encoding = "2"
rand = "0.8"
sha2 = "0.10"
subtle = "2"
tokio-postgres = { workspace = true }
# A3 — JWT validation + JWKS fetch.
jsonwebtoken = "9"
reqwest = { workspace = true }
tokio = { workspace = true }
url = "2"

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
