[package]
name = "rekt-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Load + latency benchmark for rektifier vs dynamodb-local vs direct PG"
publish = false

[[bin]]
name = "rekt-bench"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
hdrhistogram = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
