[package]
name = "rekt-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Runtime catalog of DDB tables for rektifier (cache + metadata table + seeder)"

[dependencies]
arc-swap = { workspace = true }
deadpool-postgres = { workspace = true }
rekt-config = { path = "../rekt-config" }
rekt-storage = { path = "../rekt-storage" }
rekt-translator = { path = "../rekt-translator" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
