[package]
name = "rekt-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "TOML config loader for rektifier (tables + size limits)"

[dependencies]
rekt-storage = { path = "../rekt-storage" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
