[package]
name = "rekt-gsi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Async GSI lifecycle orchestrator: state machine, backfill, online index creation (PLAN-9 DualWrite mode)"

[dependencies]
deadpool-postgres = { workspace = true }
rekt-catalog = { path = "../rekt-catalog" }
rekt-storage = { path = "../rekt-storage" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
