[package]
name = "rekt-meta"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Boot-time PG schema verifier for rektifier-declared tables"

[dependencies]
rekt-config = { path = "../rekt-config" }
rekt-storage = { path = "../rekt-storage" }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
