[package]
name = "rekt-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DynamoDB JSON wire-format types for rektifier"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
