[package]
name = "rekt-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "axum HTTP server dispatching DynamoDB ops to translator + backend"

[dependencies]
rekt-catalog = { path = "../rekt-catalog" }
rekt-ddl = { path = "../rekt-ddl" }
rekt-protocol = { path = "../rekt-protocol" }
rekt-auth = { path = "../rekt-auth" }
rekt-storage = { path = "../rekt-storage" }
rekt-translator = { path = "../rekt-translator" }
async-trait = { workspace = true }
axum = "0.7"
tower-http = { workspace = true, features = ["limit", "trace", "catch-panic", "timeout"] }
http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rekt-expressions = { path = "../rekt-expressions" }
async-trait = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
