[package]
name = "rekt-storage-libpq"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "tokio-postgres-backed storage backend for rektifier"

[dependencies]
rekt-storage = { path = "../rekt-storage" }
rekt-expressions = { path = "../rekt-expressions" }
rekt-protocol = { path = "../rekt-protocol" }
async-trait = { workspace = true }
bytes = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rekt-translator = { path = "../rekt-translator" }
tokio = { workspace = true }
