[package]
name = "rekt-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Backend storage trait for rektifier (no concrete backend)"

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
