[package]
name = "rekt-translator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DynamoDB op + AST -> backend-neutral plan (storage layer call shape)"

[dependencies]
rekt-protocol = { path = "../rekt-protocol" }
rekt-storage = { path = "../rekt-storage" }
bytes = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
