[package]
name = "rektifier"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "DynamoDB-compatible API in front of PostgreSQL (binary)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rektifier"
path = "src/main.rs"

[dependencies]
rekt-catalog = { path = "../rekt-catalog" }
rekt-config = { path = "../rekt-config" }
rekt-ddl = { path = "../rekt-ddl" }
rekt-gsi = { path = "../rekt-gsi" }
rekt-server = { path = "../rekt-server" }
rekt-auth = { path = "../rekt-auth" }
rekt-storage = { path = "../rekt-storage" }
rekt-storage-libpq = { path = "../rekt-storage-libpq" }
rekt-translator = { path = "../rekt-translator" }
anyhow = { workspace = true }
axum = "0.7"
deadpool-postgres = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-flame = { workspace = true, optional = true }

[features]
flame = ["dep:tracing-flame"]
